Sourcegraph/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-sourcegraph
  namespace: prod
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 7443
      targetPort: 7443
    - name: additional
      port: 3370
      targetPort: 3370
  selector:
    app: gitlab-sourcegraph
