Sourcegraph/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sourcegraph
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingrewss.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - sourcegraph.devops.example.com
    secretName: tls-devops-example-ua
  rules:
    - host: sourcegraph.devops.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: gitlab-sourcegraph
                port:
                  number: 7443
